--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-html-parser": "^2.0.2",
     "react-intl": "^2.8.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.0.3",
