--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.1",
+    "axios": "^0.19.0",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
@@ -101,6 +102,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
     "react-slick": "^0.24.0",
+    "react-ui-cards": "^1.5.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-saga": "^1.0.1",
